--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="format-detection" content="telephone=no">
-	<title>John Markowitz</title>
+	<title>Tanner Bowman</title>
 	<link rel="stylesheet" href="js/fancybox/jquery.fancybox.css" type="text/css" media="screen" />
 	<link rel="stylesheet" href="css/all.css" />
 	<link rel="stylesheet" href="css/screen.css" />
@@ -28,8 +28,8 @@
 							<li><a href="Contact.html">Contact</a></li>
 						</ul>
 					</nav>
-				<h1 class="logo">John Markowitz</h1>
-				<h2 class="slogan">Professional Web Designer</h2>
+				<h1 class="logo">Tanner Bowman</h1>
+				<h2 class="slogan">Computer Science Teacher</h2>
 			</header>
 		</div>
 		<div class="wrapper-holder grey">
@@ -89,7 +89,7 @@
 				</ul>
 				<p class="copy">Copyright 2014 John Markowitz. All rights reserved.</p>
 			</div>
-		</footer>	
+		</footer>
 	</div>
 	<script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
 	<script src="js/isotope.pkgd.min.js"></script>
