--- a/index.html
+++ b/index.html
@@ -40,38 +40,38 @@
 						<ul>
 							<li>
 								<div class="date">
-									<span>12/09</span>
+									<span>08/14</span>
 								</div>
-								<h3>tempora incidunt</h3>
-								<p>Dolor sit consectetur adipisicing elit, sed do eiusmod tempor</p>
+								<h3>Began Teaching</h3>
+								<p>Started teaching Computer Science to kids 8 years old and up</p>
 							</li>
 							<li>
 								<div class="date">
-									<span>02/10</span>
+									<span>08/17</span>
 								</div>
-								<h3>nemo enim ipsam</h3>
-								<p>Laudantium totam rem aperiam eaque ipsa quae</p>
+								<h3>American Fork High School</h3>
+								<p>Started as the AFHS Computer Science teacher</p>
 							</li>
 							<li>
 								<div class="date">
-									<span>09/11</span>
+									<span>12/17</span>
 								</div>
-								<h3>unde omnis iste</h3>
-								<p>Eaque ipsa quae illo inventore veritatis et quasi architecto </p>
+								<h3>Bachelors Degree</h3>
+								<p>Completed my BS degree in Technology and Engineering Education with a Computer Science emphasis</p>
 							</li>
 							<li>
 								<div class="date">
-									<span>06/12</span>
+									<span>05/19</span>
 								</div>
-								<h3>porro quisquam</h3>
-								<p>Dolorem ipsum quia consectetur adipisci velit sed quia non</p>
+								<h3>Masters Degree</h3>
+								<p>Completed my Masters degree in Instructional Design</p>
 							</li>
 							<li>
 								<div class="date">
-									<span>11/13</span>
+									<span>06/19</span>
 								</div>
-								<h3>dolorem eum</h3>
-								<p>Nodi tempora incidunt ut labore dolore magnam</p>
+								<h3>Doctorate Program</h3>
+								<p>Began a Doctorate program in Educational Technology and Leadership</p>
 							</li>
 						</ul>
 					</div>
