--- a/index.html
+++ b/index.html
@@ -11,9 +11,6 @@
 	<link rel="stylesheet" href="js/fancybox/jquery.fancybox.css" type="text/css" media="screen" />
 	<link rel="stylesheet" href="css/all.css" />
 	<link rel="stylesheet" href="css/screen.css" />
-	<!--[if lt IE 9]>
-		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-	<![endif]-->
 </head>
 <body>
 	<div id="wrapper">
@@ -42,35 +39,35 @@
 								<div class="date">
 									<span>08/14</span>
 								</div>
-								<h3>Began Teaching</h3>
+								<h3>BEGAN TEACHING</h3>
 								<p>Started teaching Computer Science to kids 8 years old and up</p>
 							</li>
 							<li>
 								<div class="date">
 									<span>08/17</span>
 								</div>
-								<h3>American Fork High School</h3>
+								<h3>AMERICAN FORK HIGH</h3>
 								<p>Started as the AFHS Computer Science teacher</p>
 							</li>
 							<li>
 								<div class="date">
 									<span>12/17</span>
 								</div>
-								<h3>Bachelors Degree</h3>
-								<p>Completed my BS degree in Technology and Engineering Education with a Computer Science emphasis</p>
+								<h3>BACHELORS DEGREE</h3>
+								<p>Completed a BS degree in Computer Science education</p>
 							</li>
 							<li>
 								<div class="date">
 									<span>05/19</span>
 								</div>
-								<h3>Masters Degree</h3>
-								<p>Completed my Masters degree in Instructional Design</p>
+								<h3>MASTERS DEGREE</h3>
+								<p>Completed a Masters degree in Instructional Design</p>
 							</li>
 							<li>
 								<div class="date">
 									<span>06/19</span>
 								</div>
-								<h3>Doctorate Program</h3>
+								<h3>DOCTORATE PROGRAM</h3>
 								<p>Began a Doctorate program in Educational Technology and Leadership</p>
 							</li>
 						</ul>
@@ -87,7 +84,7 @@
 					<li class="twitter"><a href="#">Twitter</a></li>
 					<li class="pinterest"><a href="#">Pinterest</a></li>
 				</ul>
-				<p class="copy">Copyright 2014 John Markowitz. All rights reserved.</p>
+				<p class="copy">Copyright 2020 Tanner Bowman. All rights reserved.</p>
 			</div>
 		</footer>
 	</div>
